# sandbox

./: .gitignore  BUILD.bazel  MODULE.bazel  docker-compose.yml  go.mod  go.sum  prometheus.yml
api/fileupload/v1/: BUILD.bazel  fileupload_service.proto
cmd/grpcsrv/: BUILD.bazel  grpcsrv.go
cmd/httpsrv/: BUILD.bazel  httpsrv.go  main.go
cmd/uploader/: BUILD.bazel  uploader.go
internal/grpc/server/: BUILD.bazel  metrics.go  server.go
internal/http/server/: BUILD.bazel  filehandler.go  server.go
