module(name = "sandbox")

bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "protobuf", version = "28.0-rc2")
bazel_dep(name = "rules_go", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_gorilla_mux", "com_github_prometheus_client_golang", "org_golang_google_grpc")
