load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "grpcsrv_lib",
    srcs = ["grpcsrv.go"],
    importpath = "github.com/mrdan4es/sandbox/cmd/grpcsrv",
    visibility = ["//visibility:private"],
    deps = [
        "//api/fileupload/v1:fileuploadpb_go_proto",
        "//internal/grpc/server",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "grpcsrv",
    embed = [":grpcsrv_lib"],
    visibility = ["//visibility:public"],
)
