load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "filehandler.go",
        "server.go",
    ],
    importpath = "github.com/mrdan4es/sandbox/internal/http/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_gorilla_mux//:mux",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
